prevent text collapse

--- a/HTML - Labour Site - Redesigned Version/styles.css
+++ b/HTML - Labour Site - Redesigned Version/styles.css
@@ -39,11 +39,9 @@
   }
 }
 
-
-
 .mapSearch{
-  margin-left: 15vw;
-  margin-right: 15vw;
+  margin-left: 10vw;
+  margin-right: 10vw;
   margin-top: 5vh;
   height: auto;
   background-color: #666666;
@@ -54,6 +52,8 @@
 .sel{
   height: 30px;
   color: white;
+  padding-left: 10px;
+  padding-right:10px;
 }
 
 .sel:hover{
